Bug 475396 - Cannot replay or move back the video slider when a video finishes playing
Summary: Cannot replay or move back the video slider when a video finishes playing
Status: RESOLVED FIXED
Alias: None
Product: PlasmaTube
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Linus Jahn
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-09 10:23 UTC by medin
Modified: 2023-10-21 17:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2023-10-09 10:23:30 UTC
When a video reaches its end, there is no way to replay it, and the slider refuses to move backward.
Comment 1 Joshua Goins 2023-10-21 17:12:59 UTC
Git commit a27240bfe42463bee7e633cde829612c5acd71e3 by Joshua Goins.
Committed on 21/10/2023 at 19:12.
Pushed by redstrate into branch 'master'.

Don't stop the video if it ends

This makes it possible to replay and seek through the video even though
it had ended.

M  +1    -0    src/mpvobject.cpp

https://invent.kde.org/multimedia/plasmatube/-/commit/a27240bfe42463bee7e633cde829612c5acd71e3