Don't stop the video if it ends

This makes it possible to replay and seek through the video even though
it had ended.

BUG: 475396